I'm a DevOps Engineer now

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,7 +26,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Greg Kessman</h1>
-								<p>Engineer <span class="icon fa-circle"></span> Cloud Enthusiast <span class="icon fa-circle"></span> Leather Crafter</p>
+								<p>DevOps Engineer <span class="icon fa-circle"></span> Cloud Enthusiast <span class="icon fa-circle"></span> Leather Crafter</p>
 							</div>
 						</div>
 						<ul class="icons">
